<resources>
    <string name="app_name">Base Project</string>
    <string name="well_come">Well come</string>
    <string name="search_title">Search Song</string>
    <string name="search_hint">Search album song</string>
    <string name="search_album_song">Search album song</string>
    <string name="_328_n_songs">328 \n Songs</string>
    <string name="_52_n_albums">52 \n Albums</string>
    <string name="_87_n_artists">87 \n Artists</string>
    <string name="themes">Themes</string>
    <string name="ringtone_cutter">Ringtone Cutter</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="equliser">Equliser</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="hidden_folder">Hidden Folder</string>
    <string name="scan_media">Scan Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home Fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="songs">Songs</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="songs_fragment">Songs Fragment</string>
    <string name="hot_recommended">Hot Recommended</string>
    <string name="playlist">Playlist</string>
    <string name="view_all">View All</string>
    <string name="recently_played">Recently Played</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_songs">All Songs</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="hello_artist_fragment">Hello Artist Fragment</string>
    <string name="hello_genre_fragment">Hello Genre Fragment</string>
    <string name="hello_albums_fragment">Hello Albums Fragment</string>
    <string name="hello_playlist_songs_fragment">Hello Playlist Songs Fragment</string>
    <string name="title">title</string>
    <string name="fragment_music">Fragment Music</string>
    <string name="my_playlist">My Playlist</string>
    <string name="add_playlist">add playlist</string>
    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="headset">Headset</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="advanced">Advanced</string>
    <string name="other">Other</string>
    <string name="top_albums">Top Albums</string>
    <string name="file_dragon">File Dragon</string>
    <string name="_2019">2019</string>
    <string name="_2018">2018</string>
    <string name="sound_of_life">Sound of Life</string>
    <string name="giving_heart">Giving Heart</string>
    <string name="_2017">2017</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playing_queue">Add to playing queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="rename">Rename</string>
    <string name="tag_editor">Tag editor</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="share">Share</string>
</resources>