<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:showAsAction="always">
    <item
        android:id="@+id/itemPlay"
        android:title="@string/play" >
    </item>
    <item

        android:id="@+id/itemPlayNext"
        android:title="@string/play_next" />
    <item
        android:id="@+id/itemAddQueue"
        android:title="@string/add_to_playing_queue" />
    <item
        android:id="@+id/itemAddPlaylist"
        android:title="@string/add_to_playlist" />
    <item
        android:id="@+id/itemRename"
        android:title="@string/rename" />
    <item
        android:id="@+id/itemHiddenFolder"
        android:title="@string/hidden_folder" />
    <item
        android:id="@+id/itemTagEditor"
        android:title="@string/tag_editor" />
    <item
        android:id="@+id/itemGoArtist"
        android:title="@string/go_to_artist" />
    <item
        android:id="@+id/itemDelete"
        android:title="@string/delete_from_device" />
    <item
        android:id="@+id/itemShare"
        android:title="@string/share" />

</menu>