<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:showAsAction="always">
    <item
        android:id="@+id/itemThemes"
        android:icon="@drawable/ic_menu_slide_paint"
        android:title="@string/themes" >
    </item>
    <item

        android:id="@+id/itemCutter"
        android:icon="@drawable/ic_menu_slide_scissors"
        android:title="@string/ringtone_cutter" />
    <item
        android:id="@+id/itemSleepTimer"
        android:icon="@drawable/ic_menu_slide_stopwatch"
        android:title="@string/sleep_timer" />
    <item
        android:id="@+id/itemEquliser"
        android:icon="@drawable/ic_menu_slide_sound_bars"
        android:title="@string/equliser" />
    <item
        android:id="@+id/itemDriveMode"
        android:icon="@drawable/ic_menu_slide_car"
        android:title="@string/drive_mode" />
    <item
        android:id="@+id/itemHiddenFolder"
        android:icon="@drawable/ic_menu_slide_folder"
        android:title="@string/hidden_folder" />
    <item
        android:id="@+id/itemScanMedia"
        android:icon="@drawable/ic_menu_slide_scanner"
        android:title="@string/scan_media" />

</menu>