<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/_328_n_songs"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/_52_n_albums"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/_87_n_artists"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout style="@style/style_linear_popup_menu">

        <ImageView
            android:id="@+id/imgThemes"
            app:srcCompat="@drawable/ic__01_popup_menu_paint"
            style="@style/style_imageView_popup_menu" />
        <TextView
            android:id="@+id/txtThemes"
            android:text="@string/themes"
            style="@style/style_view_popup_menu" />

    </LinearLayout>
    <LinearLayout
        style="@style/style_linear_popup_menu">
        <ImageView
            style="@style/style_imageView_popup_menu"
            android:id="@+id/imgRingtone"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic__02_popup_menu_scissors"/>
        <TextView
            android:id="@+id/txtRingtone"
            android:text="@string/ringtone_cutter"
            style="@style/style_view_popup_menu" />

    </LinearLayout>
    <LinearLayout
        style="@style/style_linear_popup_menu">
        <ImageView
            style="@style/style_imageView_popup_menu"
            android:id="@+id/imgSleep"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic__03_popup_menu_stopwatch"/>
        <TextView
            android:id="@+id/txtSleepTimer"
            android:text="@string/sleep_timer"
            style="@style/style_view_popup_menu" />
    </LinearLayout>
    <LinearLayout
        style="@style/style_linear_popup_menu">
        <ImageView
            style="@style/style_imageView_popup_menu"
            android:id="@+id/imgEquliser"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic__04_popup_menu_sound_bars"/>
        <TextView
            android:id="@+id/txtEquliser"
            android:text="@string/equliser"
            style="@style/style_view_popup_menu" />
    </LinearLayout>
    <LinearLayout
        style="@style/style_linear_popup_menu">
        <ImageView
            style="@style/style_imageView_popup_menu"
            android:id="@+id/imgDrive"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic__3_popup_menu_car"/>
        <TextView
            android:id="@+id/txtDrive"
            android:text="@string/drive_mode"
            style="@style/style_view_popup_menu" />
    </LinearLayout>
    <LinearLayout
        style="@style/style_linear_popup_menu">
        <ImageView
            style="@style/style_imageView_popup_menu"
            android:id="@+id/imgHidden"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic__06_popup_menu_folder"/>
        <TextView
            android:id="@+id/txtHidden"
            android:text="@string/hidden_folder"
            style="@style/style_view_popup_menu" />
    </LinearLayout>
    <LinearLayout
        style="@style/style_linear_popup_menu">
        <ImageView
            style="@style/style_imageView_popup_menu"
            android:id="@+id/imgScan"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic__06_popup_menu_folder"/>
        <TextView
            android:id="@+id/txtScan"
            android:text="@string/scan_media"
            style="@style/style_view_popup_menu" />
    </LinearLayout>


</LinearLayout>
</layout>