<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_mock"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="70dp">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_logo"
                android:layout_gravity=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/_328_n_songs"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/_52_n_albums"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/_87_n_artists"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_popup_menu">

            <ImageView
                android:id="@+id/imgThemes"
                app:srcCompat="@drawable/ic_menu_slide_paint"
                style="@style/style_imageView_popup_menu" />

            <TextView
                android:id="@+id/txtThemes"
                android:text="@string/themes"
                style="@style/style_view_popup_menu" />

        </LinearLayout>

        <LinearLayout style="@style/style_linear_popup_menu">

            <ImageView
                style="@style/style_imageView_popup_menu"
                android:id="@+id/imgRingtone"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_menu_slide_scissors" />

            <TextView
                android:id="@+id/txtRingtone"
                android:text="@string/ringtone_cutter"
                style="@style/style_view_popup_menu" />

        </LinearLayout>

        <LinearLayout style="@style/style_linear_popup_menu">

            <ImageView
                style="@style/style_imageView_popup_menu"
                android:id="@+id/imgSleep"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_menu_slide_stopwatch" />

            <TextView
                android:id="@+id/txtSleepTimer"
                android:text="@string/sleep_timer"
                style="@style/style_view_popup_menu" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_popup_menu">

            <ImageView
                style="@style/style_imageView_popup_menu"
                android:id="@+id/imgEquliser"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_menu_slide_sound_bars" />

            <TextView
                android:id="@+id/txtEquliser"
                android:text="@string/equliser"
                style="@style/style_view_popup_menu" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_popup_menu">

            <ImageView
                style="@style/style_imageView_popup_menu"
                android:id="@+id/imgDrive"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_menu_slide_car" />

            <TextView
                android:id="@+id/txtDrive"
                android:text="@string/drive_mode"
                style="@style/style_view_popup_menu" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_popup_menu">

            <ImageView
                style="@style/style_imageView_popup_menu"
                android:id="@+id/imgHidden"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_menu_slide_folder" />

            <TextView
                android:id="@+id/txtHidden"
                android:text="@string/hidden_folder"
                style="@style/style_view_popup_menu" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_popup_menu">

            <ImageView
                style="@style/style_imageView_popup_menu"
                android:id="@+id/imgScan"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_menu_slide_folder" />

            <TextView
                android:id="@+id/txtScan"
                android:text="@string/scan_media"
                style="@style/style_view_popup_menu" />
        </LinearLayout>


    </LinearLayout>
</layout>