<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="HomeModel"
            type="com.tuanqd.mockproject.home.HomeModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtHotRecommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hot_recommended"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_rcv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHotRecommended" />

        <TextView
            android:id="@+id/txtPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommended_rcv_home"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtViewAllPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            app:layout_constraintBottom_toBottomOf="@+id/txtPlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.841"
            app:layout_constraintStart_toEndOf="@+id/txtPlaylist"
            app:layout_constraintTop_toTopOf="@+id/txtPlaylist"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_rcv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPlaylist" />

        <TextView
            android:id="@+id/txtRecentlyPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recently_played"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_rcv_home"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            app:layout_constraintBottom_toBottomOf="@+id/txtRecentlyPlayed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.865"
            app:layout_constraintStart_toEndOf="@+id/txtRecentlyPlayed"
            app:layout_constraintTop_toTopOf="@+id/txtRecentlyPlayed"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recently_played_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRecentlyPlayed"
            app:layout_constraintVertical_bias="0.466" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>